--- a/mha_project/pubspec.yaml
+++ b/mha_project/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^4.0.4
   firebase_core: ^2.12.0
   firebase_auth: ^4.6.0
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
