--- a/mha_project/pubspec.yaml
+++ b/mha_project/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.12.0
   firebase_auth: ^4.6.0
   http: ^0.13.6
+  cloud_firestore: ^4.7.1
 
 dev_dependencies:
   flutter_test:
