added hotel's name and add image in sign up screen

--- a/mha_project/pubspec.yaml
+++ b/mha_project/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.6.0
   http: ^0.13.6
   cloud_firestore: ^4.7.1
+  image_picker: ^0.8.7+5
+  firebase_storage: ^11.2.1
 
 dev_dependencies:
   flutter_test:
