--- a/mha_project/pubspec.yaml
+++ b/mha_project/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.7.1
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
