--- a/mha_project/pubspec.yaml
+++ b/mha_project/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.1
   intl: ^0.18.1
+  fl_chart: ^0.62.0
 
 dev_dependencies:
   flutter_test:
